--- a/gamberoMiguel(ExamenPractico2025-26)/Examen.html
+++ b/gamberoMiguel(ExamenPractico2025-26)/Examen.html
@@ -8,212 +8,202 @@
   </head>
   <body>
     <h1>Miguel Angel Gambero Rios</h1>
-    <h2>
-      ejercicio 1 Prompt
-      <button onclick="ejercicio1()">Ejercicio 1</button>
-    </h2>
-
+    <h2><u>Ejercicio 1</u></h2>
+    <button onclick="ejercicio1()">Ejercicio 1</button><br />
+    <div id="resultado1"></div>
     <script>
       function ejercicio1() {
-        let numero1 = parseInt(prompt("Numero 1:"));
-        let numero2 = parseInt(prompt("Numero 2: "));
-        let numero3 = parseInt(prompt("Numero 3: "));
+        numero1 = parseInt(prompt("Digame el primer numero: "));
+        numero2 = parseInt(prompt("Digame el segundo numero: "));
+        numero3 = parseInt(prompt("Digame el tercer numero: "));
 
-        if (numero1 % 1 != 0 || numero1 % 1 != 0 || numero1 % 1 != 0) {
-          document.write("Algun numero no es entero.");
+        if (numero1 % 1 != 0 || numero2 % 1 != 0 || numero3 % 1 != 0) {
+          document.getElementById(
+            "resultado1"
+          ).innerHTML = `<p>Algun numero no es entero</p>`;
         } else {
-          document.write(
-            "El resultado es: " + (numero1 * numero2 + numero3) * numero3
-          );
+          resultado = (numero1 * numero2 + numero3) * numero3;
+          document.getElementById("resultado1").innerHTML = `
+              El resultado es de ${resultado}
+            `;
         }
       }
     </script>
 
-    <h2>ejercicio 2 typeof</h2>
+    <h2><u>Ejercicio 2</u></h2>
+    <button onclick="ejercicio2()">Ejercicio 2</button>
+    <div id="resultado2"></div>
     <script>
-      var a = "hola",
-        b = 34,
-        c = 3.1e3;
-      var at = typeof a;
-      var bt = typeof b;
-      var ct = typeof c;
-      document.write("Tipo de " + a + " es " + at + "<br>");
-      document.write("Tipo de " + b + " es " + bt + "<br>");
-      document.write("Tipo de " + c + " es " + ct);
+      function ejercicio2() {
+        document.getElementById("resultado2").innerHTML = `
+          <p>True:  ${typeof true}</p>
+          <p>Teticas:  ${typeof "Teticas"}</p>
+          <p>3:  ${typeof 3}</p>
+          <p>4.4:  ${typeof 4.4}</p>
+          `;
+      }
     </script>
 
-    <h2>
-      ejercicio 3 operador ternario
-      <button onclick="ejercicio3()">Ejercicio 3</button>
-    </h2>
+    <h2><u>Ejercicio 3</u></h2>
+    <button onclick="ejercicio3()">Ejercicio 3</button>
+    <div id="resultado3"></div>
     <script>
       function ejercicio3() {
-        const numero = parseInt(prompt("Dime un numero: "));
-        switch (numero) {
-          case 1:
-            document.write("Filosofo seleccionado: Aristoteles.");
-            break;
-          case 2:
-            document.write("Filosofo seleccionado: Platon.");
-            break;
-          case 3:
-            document.write("Filosofo seleccionado: San agustin.");
-            break;
-          case 4:
-            document.write("Filosofo seleccionado: Santo Tomas.");
-            break;
-          case 5:
-            document.write("Filosofo seleccionado: Descartes.");
-            break;
-          case 6:
-            document.write("Filosofo seleccionado: Rouseau.");
-            break;
-          case 7:
-            document.write("Filosofo seleccionado: Locke.");
-            break;
-          default:
-            document.write("No hay un filosofo con ese valor.");
-        }
+        const mes = parseInt(prompt("Digame un mes"));
+
+        const filosofo =
+          mes === 1
+            ? "Aristoteles"
+            : mes === 2
+            ? "Platon"
+            : mes === 3
+            ? "San Agustin"
+            : mes === 4
+            ? "Santo Tomas"
+            : mes === 5
+            ? "Descartes"
+            : mes === 6
+            ? "Rousseau"
+            : mes === 7
+            ? "Locke"
+            : "Filosofo no encontrado";
+
+        document.getElementById("resultado3").innerHTML = `
+            <p> El mes ${mes} tiene de filosofo a ${filosofo}</p>
+          `;
       }
     </script>
 
-    <h2>
-      ejercicio 4 binario
-      <button onclick="ejercicio4()">Ejercicio 4</button>
-    </h2>
+    <h2><u>Ejercicio 4</u></h2>
+    <button onclick="ejercicio4()">Ejercicio 4</button>
+    <div id="resultado4"></div>
     <script>
       function ejercicio4() {
-        var entero1 = prompt("Ponme otro numero: ");
-        var entero2 = prompt("Ponme un numero");
+        var entero1 = parseInt(prompt("Ponme otro numero: "));
+        var entero2 = parseInt(prompt("Ponme un numero"));
+
+        var binario1 = entero1.toString(2);
+        var binario2 = entero2.toString(2);
         var operacion = prompt("Pon la operacion (AND,OR,XOR,IZQ,DER): ");
 
         switch (operacion) {
           case "AND":
             let DesplazamientoAND = entero1 & entero2;
-            document.write("<br>AND: " + DesplazamientoAND);
+            let DesplazamientoANDBinario = binario1 & binario2;
+            document.getElementById(
+              "resultado4"
+            ).innerHTML = ` Desplazamiento AND : ${DesplazamientoAND} -> ${DesplazamientoANDBinario}`;
             break;
           case "OR":
             let DesplazamientoOR = entero1 | entero2;
-            document.write("<br>OR: " + DesplazamientoOR);
+            let DesplazamientoORBinario = binario1 | binario2;
+            document.getElementById(
+              "resultado4"
+            ).innerHTML = ` Desplazamiento OR : ${DesplazamientoOR} -> ${DesplazamientoORBinario}`;
             break;
           case "XOR":
             let DesplazamientoXOR = entero1 ^ entero2;
-            document.write("<br>XOR: " + DesplazamientoXOR);
+            let DesplazamientoXORBinario = binario1 ^ binario2;
+            document.getElementById(
+              "resultado4"
+            ).innerHTML = ` Desplazamiento XOR : ${DesplazamientoXOR} -> ${DesplazamientoXORBinario}`;
             break;
           case "IZQ":
             let Desplazamientoizquierda = entero2 << 1;
-            document.writeln("<br>Izquierda: " + Desplazamientoizquierda);
+            let DesplazamientoIZQBinario = binario2 << 1;
+            document.getElementById(
+              "resultado4"
+            ).innerHTML = ` Desplazamiento Izq : ${Desplazamientoizquierda} -> ${DesplazamientoIZQBinario}`;
             break;
           case "DER":
             let Desplazamientoderecha = entero2 >> 1;
-            document.writeln("<br>Derecha: " + Desplazamientoderecha);
+            let DesplazamientoDERBinario = binario2 >> 1;
+            document.getElementById(
+              "resultado4"
+            ).innerHTML = ` Desplazamiento Der : ${Desplazamientoderecha} -> ${DesplazamientoDerBinario}`;
             break;
         }
       }
     </script>
 
-    <h2>
-      ejercicio 5 switch
-      <button onclick="ejercicio5()">Ejercicio 5</button>
-    </h2>
+    <h2><u>Ejercicio 6</u></h2>
+    <button onclick="ejercicio6()">Ejercicio 6</button>
+    <div id="resultado6"></div>
     <script>
-      function ejercicio5() {
-        let numero = parseInt(prompt("Dime un numero: "));
-        switch (numero) {
-          case (1, 2, 3):
-            document.write("Numeros pequeños");
-            break;
-          case (5, 6, 7):
-            if (numero >= 7) {
-              document.writeln("La opcion es mayor o igual a 5<br>");
-            }
-            if (numero >= 6) {
-              document.writeln("La opcion es mayor o igual a 6<br>");
-            }
-            if (numero >= 5) {
-              document.writeln("La opcion es mayor o igual a 7<br>");
-            }
-            break;
-          case 8:
-            document.write("Numero 8");
-            break;
-          case 9:
-            document.write("Numero 9");
-          default:
-            document.write("ERROR");
+      function ejercicio6() {
+        var colores = [
+          "#f25",
+          "#f50",
+          "#f85",
+          "#F11",
+          "#F36",
+          "#fA5",
+          "#f5B",
+          "#f25",
+          "#f50",
+          "#f85",
+          "#F11",
+        ];
+        let salida = "<table>";
+        numero = parseInt(prompt("Digame un numero: "));
+
+        for (let i = 0; i < numero; i++) {
+          salida += "<tr>";
+          for (let j = 0; j < numero; j++) {
+            salida += `<td bgcolor="${colores[j]}">${j + 1}</td>`;
+          }
+          salida += "<tr>";
+        }
+        salida += "</tr>";
+        salida += "</table>";
+        document.getElementById("resultado6").innerHTML = salida;
+      }
+    </script>
+
+    <h2><u>Ejercicio 7</u></h2>
+    <button onclick="ejercicio7()">Ejercicio 7</button>
+    <div id="resultado7"></div>
+    <script>
+      function ejercicio7() {
+        let salida = "";
+        var persona = {
+          Nombre: "paco",
+          Apellido: "Lopez",
+          nacimiento: "11/12/1969",
+          trabajo: "informatico",
+          sexo: "hombre",
+          amigos: ["juan", "pedro", "miguel"],
+          sueldo: 40000,
+          trabajo: "olists",
+          UltimoProjecto: "jse.js",
+        };
+
+        for (var propiedad in persona) {
+          salida += `${propiedad} -> ${persona[propiedad]}<br>`;
         }
       }
     </script>
 
-    <h2>ejercicio 6 tabla
-      <button onclick="ejercicio6()">Ejercicio 6</button>
-    </h2>
+    <h2><u>Ejercicio 8</u></h2>
+    <button onclick="ejercicio8()">Ejercicio 8</button>
+    <div id="resultado8"></div>
     <script>
-      function ejercicio6(){
-        let numero = parseInt(prompt("Dime un numero: "));
-        var colores=["#f25","#f50","#f85","#F11","#F36","#fA5","#f5B","#f25","#f50","#f85","#F11"]
-
-        var color = colores[numero];
-        document.getElementById(color).innerHTML = color;
+      function ejercicio8() {
+        let salida = "<table border=1>";
+        var signos = ["capricornio", "acuario", "piscis", "aries", "tauro"];
+        salida += `<tr>`;
+        for (let i = 0; i < signos.length; i++) {
+          salida += `<td><img src="./signos/${signos[i]}.jpg"></td>`;
+        }
+        salida += `</tr>`;
+        salida += `<tr>`;
+        for (let i = 0; i < signos.length; i++) {
+          salida += `<td align="center">${signos[i]}</td>`;
+        }
+        salida += `</tr>`;
+        salida += "</table>";
+        document.getElementById("resultado8").innerHTML = salida;
       }
-    </script>
-    <table border="1">
-      <tr>
-        <td bgcolor="color1">1</td>
-        <td bgcolor="color2">1</td>
-        <td bgcolor="color3">1</td>
-        <td bgcolor="color4">1</td>
-      </tr>
-    </table>
-
-    <h2>ejercicio 7 bucle1</h2>
-    <script>
-      var persona = { Nombre: "paco", Apellido: "Lopez", nacimiento:"11/12/1969", trabajo:"informatico" , sexo: "hombre", amigos:["juan","pedro","miguel"],sueldo:40000, trabajos:"olists SL",UltimoProjecto: "jse.js" };
-      
-      document.writeln("· Nombre: " + persona.Nombre + "<br>");
-      document.writeln("· Apellido: " + persona.Apellido + "<br>");
-      document.writeln("· Fecha de nacimiento: " + persona.nacimiento + "<br>");
-      document.writeln("· Trabajo: " + persona.trabajo + "<br>");
-      document.writeln("· Sexo: " + persona.sexo + "<br>");
-      document.writeln("· Amigos: " + persona.amigos + "<br>");
-      document.writeln("· Sueldo: " + persona.sueldo + "<br>");
-      document.writeln("· Trabajos: " + persona.trabajos + "<br>");
-      document.writeln("· Ultimos proyectos: " + persona.UltimoProjecto + "<br>");
-
-    </script>
-
-    <h2>ejercicio 8 bucle2</h2>
-    <script>
-
-    </script>
-    <table border="1">
-      <tr>
-        <th><img src="./signos/capricornio.jpg"></th>
-        <th><img src="./signos/acuario.jpg"></th>
-        <th><img src="./signos/piscis.jpg"></th>
-        <th><img src="./signos/aries.jpg"></th>
-        <th><img src="./signos/tauro.jpg"></th>
-      </tr>
-      <tr>
-        <th><img src="./signos/capricornio.jpg"></th>
-        <th><img src="./signos/acuario.jpg"></th>
-        <th><img src="./signos/piscis.jpg"></th>
-        <th><img src="./signos/aries.jpg"></th>
-        <th><img src="./signos/tauro.jpg"></th>
-      </tr>
-    </table>
-    <h2>ejercicio 9 tabla2</h2>
-    <script></script>
-
-    <h2>ejercicio 10 Minas</h2>
-    <script>
-      const Minas = [1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1,0];
-
-      // aqui debes crear una tabla como la de la practica de los
-      //  colores pero el cambio en vez
-      // de ser sobre el bgcolor de la celda es para cambiar
-      // el codigo de una boton como el del ejercicio 5
-      // en cada celda debe haber un boton algo como <button onclick="alert('Es una Mina/ un Hueco')"> Mina/Hueco</button>
     </script>
   </body>
 </html>
