--- a/gamberoMiguel(ExamenPractico2025-26)/Examen.html
+++ b/gamberoMiguel(ExamenPractico2025-26)/Examen.html
@@ -10,12 +10,13 @@
     <h1>Miguel Angel Gambero Rios</h1>
     <h2><u>Ejercicio 1</u></h2>
     <button onclick="ejercicio1()">Ejercicio 1</button><br />
+    <p>Las teticas</p>
     <div id="resultado1"></div>
     <script>
-      function ejercicio1() {
+      function ejercicio1() { 
         numero1 = parseInt(prompt("Digame el primer numero: "));
         numero2 = parseInt(prompt("Digame el segundo numero: "));
-        numero3 = parseInt(prompt("Digame el tercer numero: "));
+        numero3 = parseInt(prompt("Digame el tercer numero: ")); 
 
         if (numero1 % 1 != 0 || numero2 % 1 != 0 || numero3 % 1 != 0) {
           document.getElementById(
