--- a/gamberoMiguel(ExamenPractico2025-26)/Examen.html
+++ b/gamberoMiguel(ExamenPractico2025-26)/Examen.html
@@ -10,13 +10,12 @@
     <h1>Miguel Angel Gambero Rios</h1>
     <h2><u>Ejercicio 1</u></h2>
     <button onclick="ejercicio1()">Ejercicio 1</button><br />
-    <p>Las teticas</p>
     <div id="resultado1"></div>
     <script>
-      function ejercicio1() { 
+      function ejercicio1() {
         numero1 = parseInt(prompt("Digame el primer numero: "));
         numero2 = parseInt(prompt("Digame el segundo numero: "));
-        numero3 = parseInt(prompt("Digame el tercer numero: ")); 
+        numero3 = parseInt(prompt("Digame el tercer numero: "));
 
         if (numero1 % 1 != 0 || numero2 % 1 != 0 || numero3 % 1 != 0) {
           document.getElementById(
@@ -151,7 +150,9 @@
         for (let i = 0; i < numero; i++) {
           salida += "<tr>";
           for (let j = 0; j < numero; j++) {
-            salida += `<td bgcolor="${colores[j % colores.length]}">${j + 1}</td>`;
+            salida += `<td bgcolor="${colores[j % colores.length]}">${
+              j + 1
+            }</td>`;
           }
           salida += "</tr>";
         }
@@ -181,6 +182,7 @@
         for (var propiedad in persona) {
           salida += `${propiedad} -> ${persona[propiedad]}<br>`;
         }
+        document.getElementById("resultado7").innerHTML = salida;
       }
     </script>
 
@@ -204,6 +206,42 @@
         salida += "</table>";
         document.getElementById("resultado8").innerHTML = salida;
       }
+    </script>
+
+    <h2>ejercicio 9 tabla2</h2>
+    <script>
+      const minasParaJuego = [
+        1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1,
+        0,
+      ];
+
+      function comprobarMina(indice) {
+        if (minasParaJuego[indice] === 1) {
+          alert("Esto es una mina");
+        } else {
+          alert("Esto es un hueco");
+        }
+      }
+
+      document.write('<table border="1">');
+      let contador = 0;
+      for (let i = 0; i < 5; i++) {
+        document.write("<tr>");
+        for (let j = 0; j < 5; j++) {
+          document.write("<td>");
+          document.write(
+            '<button onclick="comprobarMina(' +
+              contador +
+              ')">Casilla ' +
+              (contador + 1) +
+              "</button>"
+          );
+          document.write("</td>");
+          contador++;
+        }
+        document.write("</tr>");
+      }
+      document.write("</table>");
     </script>
   </body>
 </html>
